<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1.0"
    tools:context=".RecordActivity" >

    <TextView
        android:id="@+id/textPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/position"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/information"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_below="@+id/buttonSaveSettings"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btn_stop_state"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="Rec"
        android:background="#ffff0008"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="left|center_vertical"
        android:layout_alignTop="@+id/textInfo" />

    <Button
        android:id="@+id/buttonDeleteAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_all_tracks"
        android:background="#FF4444"
        android:layout_alignParentBottom="true"
        android:minHeight="40dp"
        android:height="40dp"
        android:textSize="20sp"
        android:layout_alignRight="@+id/remove_geofence"
        android:layout_alignEnd="@+id/remove_geofence" />

    <Button
        android:id="@+id/buttonSaveSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#33B5E5"
        android:minHeight="40dp"
        android:text="@string/add_track"
        android:textSize="20sp"
        android:layout_below="@+id/textPosition" />

    <Button
        android:id="@+id/buttonDeleteOne"
        android:layout_width="160dip"
        android:layout_height="wrap_content"
        android:background="#FF4444"
        android:text="@string/delete_some_tracks"
        android:minHeight="40dp"
        android:height="40dp"
        android:textSize="20sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/buttonDeleteAll" />
    <fragment
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        class="seniorgps.controller.MySupportMapFragment"
        android:id="@+id/supportMap"
        android:layout_below="@+id/textInfo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_above="@+id/buttonDeleteOne" />

    <Button
            android:id="@+id/remove_geofence"
            android:layout_height="wrap_content"
            android:text="@string/Remove_Geofence"
            android:background="#FF4444"
            android:layout_gravity="right|top"
            android:layout_below="@+id/supportMap"
            android:layout_weight=".5"
            android:layout_width="160dip"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
        android:layout_marginLeft="10dp"
        android:layout_above="@+id/buttonDeleteAll" />

    <FrameLayout
        android:id="@+id/fram_map"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/add_geofence"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/Add_Geofence"
            android:background="#64dd17"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/textPosition"
            android:layout_alignBottom="@+id/buttonSaveSettings"
            android:layout_gravity="right|center_vertical" />


    </FrameLayout>

</RelativeLayout>
