<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Aktuální pozice: Lat/Long"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ProgressBar
        android:id="@+id/positionBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonSaveSettings"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" 
        android:progressDrawable="@drawable/blueprogress"/>

    <Button
        android:id="@+id/buttonSaveSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:minHeight="120dp"
        android:text="@string/call_for_help"
        android:textSize="30sp"
        android:background="#33B5E5" />
    	

    <TextView
        android:id="@+id/positionInfoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/positionBar"
        android:layout_alignLeft="@+id/positionBar"
        android:text="@string/distance"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textPosition"
        android:layout_below="@+id/textPosition"
        android:layout_marginTop="48dp"
        android:text="@string/information"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="25dp" />

</RelativeLayout>